--- a/Group Assignments/Nour/Education.Data Exploration.ipynb
+++ b/Group Assignments/Nour/Education.Data Exploration.ipynb
@@ -2054,9 +2054,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57ff75b6-5906-4c4c-8b2f-1dbb1fcd5c07",
+   "metadata": {},
+   "source": [
+    "#Author: Nour Abou-Fadel"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e9c2d4-2518-46c0-a11c-42859c8fa677",
+   "id": "151d80ea-a051-4107-b3d3-42add9d39835",
    "metadata": {},
    "outputs": [],
    "source": []
