Midterm Jupyter Notebooks

--- a/Group Assignments/Jinglan/Census (Race) in LA county.ipynb
+++ b/Group Assignments/Jinglan/Census (Race) in LA county.ipynb
@@ -1505,8 +1505,16 @@
    "id": "9f7cdf5d-698c-4c81-801c-b74eb5618c3f",
    "metadata": {},
    "source": [
-    "#Author: Jinglan LIn"
+    "Author: Jinglan Lin"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "479692b0-3ab0-4c20-b63d-2a8fd367d02f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
