Midterm updated notebooks

--- a/Group Assignments/Jinglan/Census (Race) in LA county.ipynb
+++ b/Group Assignments/Jinglan/Census (Race) in LA county.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "135c336e-dd93-463c-97bb-a007c48c7ecd",
+   "metadata": {},
+   "source": [
+    "# Race by Census Tracts in Los Angeles County"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6571a8b8-3d5b-41f0-a942-8283a8dba80f",
+   "metadata": {},
+   "source": [
+    "This dataset is found on Census Reporter website. It is a five-year census data by census tracts of race in Los Angeles County. I will be specifically looking at percent White alone and percent African American population for our project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853e7bcb-eb91-40dc-95d9-02205a08ce0d",
+   "metadata": {},
+   "source": [
+    "**Step 1**: import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2a697e93-8b22-47f2-91ca-14e2ba95f8c4",
@@ -11,6 +35,14 @@
     "import geopandas as gpd\n",
     "import contextily as ctx\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6944d21b-6cfe-470d-9d60-2f3a0577b81c",
+   "metadata": {},
+   "source": [
+    "**Step 2**: review general stats of the dataset"
    ]
   },
   {
@@ -273,6 +305,14 @@
    ],
    "source": [
     "gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a97e1c44-7b93-4ee9-8f86-959a8e5cdb2d",
+   "metadata": {},
+   "source": [
+    "**Step 3**: remove the \"total\" row"
    ]
   },
   {
@@ -564,6 +604,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97072cf3-e139-4ee9-a7df-0abf4536ee00",
+   "metadata": {},
+   "source": [
+    "**Step 4**: remove unuseful columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "c5dcba6a-ae71-4bb3-a804-a2ac47c53acc",
@@ -772,6 +820,14 @@
    "source": [
     "gdf=gdf[columns_to_keep]\n",
     "gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe850745-0172-4cb7-a2c3-59a971816203",
+   "metadata": {},
+   "source": [
+    "**Step 5**: rename the columns"
    ]
   },
   {
@@ -1151,6 +1207,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f9ab37a-1534-45be-ac79-e51c427356ae",
+   "metadata": {},
+   "source": [
+    "**Step 6**: normalize the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "0b610dc6-f7a8-4421-b38f-2a42627a3403",
@@ -1426,6 +1490,16 @@
    ],
    "source": [
     "gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d6198d-1213-48f0-9d61-c519c3bb37f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "**Step 7**: plot the data of "
    ]
   },
   {
