--- a/Group Assignments/Jinglan/Census (Race) in LA county.ipynb
+++ b/Group Assignments/Jinglan/Census (Race) in LA county.ipynb
@@ -1493,13 +1493,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1d6198d-1213-48f0-9d61-c519c3bb37f0",
+   "cell_type": "markdown",
+   "id": "9cfbc396-c3f8-4e60-854f-8706740dedd1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "**Step 7**: plot the data of "
+    "**Step 7**: plot the data of \"percent white alone\" "
    ]
   },
   {
@@ -1536,6 +1534,14 @@
     "                 column='Percent White alone',\n",
     "                 legend=True, \n",
     "                 scheme='naturalbreaks')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1924d952-82c2-4d99-8ef5-3788f784e101",
+   "metadata": {},
+   "source": [
+    "**Step 8**: plot the data of \"Percent African American alone\""
    ]
   },
   {
@@ -1579,7 +1585,7 @@
    "id": "9f7cdf5d-698c-4c81-801c-b74eb5618c3f",
    "metadata": {},
    "source": [
-    "Author: Jinglan Lin"
+    "# Author: Jinglan Lin"
    ]
   },
   {
