--- a/Group Assignments/Group Assignment #3/Universities notebook1-Copy1.ipynb
+++ b/Group Assignments/Group Assignment #3/Universities notebook1-Copy1.ipynb
@@ -47,7 +47,16 @@
    "execution_count": 2,
    "id": "c702a13d-923c-41e9-83ea-d04b9aa3bd61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.9/site-packages/geopandas/_compat.py:106: UserWarning: The Shapely GEOS version (3.9.1-CAPI-1.14.2) is incompatible with the GEOS version PyGEOS was compiled with (3.10.1-CAPI-1.16.0). Conversions between both will be slow.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import geopandas as gpd"
    ]
@@ -849,6 +858,208 @@
    "source": [
     "gdf_trimmed=gdf[desired_columns].copy()\n",
     "gdf_trimmed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9baa51bb-a874-4d09-b890-5cd855692f3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>source</th>\n",
+       "      <th>ext_id</th>\n",
+       "      <th>cat1</th>\n",
+       "      <th>cat2</th>\n",
+       "      <th>cat3</th>\n",
+       "      <th>org_name</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>addrln1</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>info1</th>\n",
+       "      <th>info2</th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>dis_status</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>212</th>\n",
+       "      <td>62177</td>\n",
+       "      <td>211</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>Colleges and Universities</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Los Angeles Trade Technical College</td>\n",
+       "      <td>400 W. Washington Blvd.</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>68997</td>\n",
+       "      <td>90015</td>\n",
+       "      <td>34.033227</td>\n",
+       "      <td>-118.270041</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT (-118.27004 34.03323)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>62310</td>\n",
+       "      <td>211</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>Colleges and Universities</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Help Group, The</td>\n",
+       "      <td>13130 Burbank Blvd</td>\n",
+       "      <td>Sherman Oaks</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>70042</td>\n",
+       "      <td>91401</td>\n",
+       "      <td>34.171910</td>\n",
+       "      <td>-118.419360</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT (-118.41936 34.17191)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>62928</td>\n",
+       "      <td>211</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>Colleges and Universities</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>West Los Angeles College</td>\n",
+       "      <td>9000 Overland Ave</td>\n",
+       "      <td>Culver City</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>70461</td>\n",
+       "      <td>90230</td>\n",
+       "      <td>34.003062</td>\n",
+       "      <td>-118.386221</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT (-118.38622 34.00306)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>63227</td>\n",
+       "      <td>211</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>Colleges and Universities</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Long Beach Community College District</td>\n",
+       "      <td>4901 E Carson St</td>\n",
+       "      <td>Long Beach</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>70577</td>\n",
+       "      <td>90808</td>\n",
+       "      <td>33.834305</td>\n",
+       "      <td>-118.135638</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT (-118.13564 33.83430)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>63706</td>\n",
+       "      <td>211</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>Colleges and Universities</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>West Los Angeles College - Community Services ...</td>\n",
+       "      <td>9000 Overland Ave</td>\n",
+       "      <td>Culver City</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>70797</td>\n",
+       "      <td>90230</td>\n",
+       "      <td>34.003062</td>\n",
+       "      <td>-118.386221</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT (-118.38622 34.00306)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     OBJECTID source ext_id       cat1                       cat2  cat3  \\\n",
+       "212     62177    211   None  Education  Colleges and Universities  None   \n",
+       "213     62310    211   None  Education  Colleges and Universities  None   \n",
+       "214     62928    211   None  Education  Colleges and Universities  None   \n",
+       "215     63227    211   None  Education  Colleges and Universities  None   \n",
+       "216     63706    211   None  Education  Colleges and Universities  None   \n",
+       "\n",
+       "    org_name                                               Name  \\\n",
+       "212     None                Los Angeles Trade Technical College   \n",
+       "213     None                                    Help Group, The   \n",
+       "214     None                           West Los Angeles College   \n",
+       "215     None              Long Beach Community College District   \n",
+       "216     None  West Los Angeles College - Community Services ...   \n",
+       "\n",
+       "                     addrln1          city state info1 info2  post_id    zip  \\\n",
+       "212  400 W. Washington Blvd.   Los Angeles    CA  None  None    68997  90015   \n",
+       "213       13130 Burbank Blvd  Sherman Oaks    CA  None  None    70042  91401   \n",
+       "214        9000 Overland Ave   Culver City    CA  None  None    70461  90230   \n",
+       "215         4901 E Carson St    Long Beach    CA  None  None    70577  90808   \n",
+       "216        9000 Overland Ave   Culver City    CA  None  None    70797  90230   \n",
+       "\n",
+       "      latitude   longitude dis_status                     geometry  \n",
+       "212  34.033227 -118.270041       None  POINT (-118.27004 34.03323)  \n",
+       "213  34.171910 -118.419360       None  POINT (-118.41936 34.17191)  \n",
+       "214  34.003062 -118.386221       None  POINT (-118.38622 34.00306)  \n",
+       "215  33.834305 -118.135638       None  POINT (-118.13564 33.83430)  \n",
+       "216  34.003062 -118.386221       None  POINT (-118.38622 34.00306)  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf.tail()"
    ]
   },
   {
